Refactoring changes; Basically creating  * Low level Package (utils.*)  * mid level utils re.*, jibx.* etc  * layouteditor  * recordeditor package